kubernetes/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: "true"
    app: ms-travel-website
    version: 1.0.1-SNAPSHOT
    group: com.mytravel
  name: ms-travel-website
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ms-travel-website
    group: com.mytravel
  type: NodePort
